tests/ast_interpreter/err_var_undeclared_assign.expected
<string>:3:5: error: undeclared variable "y"
    y = 20;
    ^
